src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg__sparse_mm_reduce_impl(value self, value other, const char * reduce);
value atg__sparse_semi_structured_apply(value input, value thread_masks);
value atg__sparse_semi_structured_apply_dense(value input, value thread_masks);
value atg__sparse_semi_structured_linear(value input, value weight, value meta, value bias, value activation, int out_dtype);
value atg__sparse_semi_structured_mm(value mat1, value mat1_meta, value mat2, int out_dtype);
value atg__sparse_semi_structured_tile(value input, const char * algorithm, int use_cutlass);
value atg__sparse_softmax(value self, int64_t dim, int half_to_float);
value atg__sparse_softmax_backward_data(value grad_output, value output, int64_t dim, value self);
value atg__sparse_softmax_backward_data_out(value out, value grad_output, value output, int64_t dim, value self);
value atg__sparse_softmax_int(value self, int64_t dim, int dtype);
value atg__sparse_softmax_out(value out, value self, int64_t dim, int half_to_float);
value atg__sparse_sparse_matmul(value self, value other);
value atg__sparse_sparse_matmul_out(value out, value self, value other);
value atg__sparse_sum(value self);
value atg__sparse_sum_backward(value grad, value self, value dim);
value atg__sparse_sum_backward_out(value out, value grad, value self, value dim);
value atg__sparse_sum_dim(value self, value dim);
value atg__sparse_sum_dim_dtype(value self, value dim, int dtype);
value atg__sparse_sum_dim_out(value out, value self, value dim);
value atg__sparse_sum_dtype(value self, int dtype);
value atg__spdiags(value diagonals, value offsets, value shape);
value atg__spdiags_out(value out, value diagonals, value offsets, value shape);
value atg__spsolve(value A, value B, int left);
value atg__stack(value tensors, int64_t dim);
value atg__stack_out(value out, value tensors, int64_t dim);
value atg__standard_gamma(value self);
value atg__standard_gamma_grad(value self, value output);
value atg__standard_gamma_grad_out(value out, value self, value output);
value atg__standard_gamma_out(value out, value self);
value atg__test_ambiguous_defaults(value dummy, int64_t a, int64_t b);
value atg__test_ambiguous_defaults_b(value dummy, int64_t a, const char * b);
value atg__test_autograd_multiple_dispatch(value self);
value atg__test_autograd_multiple_dispatch_fullcoverage_out(value out, value self);
value atg__test_autograd_multiple_dispatch_ntonly(value self, int b);
value atg__test_autograd_multiple_dispatch_view(value self);
value atg__test_autograd_multiple_dispatch_view_copy(value self);
value atg__test_autograd_multiple_dispatch_view_copy_out(value out, value self);
value atg__test_check_tensor(value self);
value atg__test_functorch_fallback(value self, value other);
value atg__test_functorch_fallback_out(value out, value self, value other);
value atg__test_optional_filled_intlist(value values, value addends);
value atg__test_optional_filled_intlist_out(value out, value values, value addends);
value atg__test_optional_floatlist(value values, value addends);
value atg__test_optional_floatlist_out(value out, value values, value addends);
value atg__test_optional_intlist(value values, value addends);
value atg__test_optional_intlist_out(value out, value values, value addends);
value atg__test_parallel_materialize(value self, int64_t num_parallel, int skip_first);
value atg__test_serialization_subcmul(value self, value other, value alpha);
value atg__test_string_default(value dummy, const char * a, const char * b);
value atg__test_warn_in_autograd(value self);
value atg__test_warn_in_autograd_out(value out, value self);
value atg__thnn_differentiable_gru_cell_backward(value grad_hy, value input_gates, value hidden_gates, value hx, value input_bias, value hidden_bias);
value atg__thnn_differentiable_lstm_cell_backward(value grad_hy, value grad_cy, value input_gates, value hidden_gates, value input_bias, value hidden_bias, value cx, value cy);
value atg__thnn_fused_gru_cell(value input_gates, value hidden_gates, value hx, value input_bias, value hidden_bias);
value atg__thnn_fused_gru_cell_backward(value grad_hy, value workspace, int has_bias);
value atg__thnn_fused_gru_cell_backward_out(value out0, value out1, value out2, value out3, value out4, value grad_hy, value workspace, int has_bias);
value atg__thnn_fused_gru_cell_out(value out0, value out1, value input_gates, value hidden_gates, value hx, value input_bias, value hidden_bias);
value atg__thnn_fused_lstm_cell(value input_gates, value hidden_gates, value cx, value input_bias, value hidden_bias);
value atg__thnn_fused_lstm_cell_backward(value grad_hy, value grad_cy, value cx, value cy, value workspace, int has_bias);
value atg__thnn_fused_lstm_cell_backward_impl(value grad_hy, value grad_cy, value cx, value cy, value workspace, int has_bias);
value atg__thnn_fused_lstm_cell_backward_impl_out(value out0, value out1, value out2, value grad_hy, value grad_cy, value cx, value cy, value workspace, int has_bias);
value atg__thnn_fused_lstm_cell_out(value out0, value out1, value out2, value input_gates, value hidden_gates, value cx, value input_bias, value hidden_bias);
value atg__to_copy(value self, int options_kind, int options_device, int non_blocking);
value atg__to_copy_out(value out, value self, int non_blocking);
value atg__to_cpu(value tensors);
value atg__to_dense(value self, int dtype, int masked_grad);