src/bindings/torch_bindings_generated1.ml


  let stubs__sparse_mm_reduce_impl =
    foreign
      "atg__sparse_mm_reduce_impl"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> string @-> returning void)
  ;;

  let stubs__sparse_semi_structured_apply =
    foreign
      "atg__sparse_semi_structured_apply"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs__sparse_semi_structured_apply_dense =
    foreign
      "atg__sparse_semi_structured_apply_dense"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__sparse_semi_structured_linear =
    foreign
      "atg__sparse_semi_structured_linear"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_semi_structured_mm =
    foreign
      "atg__sparse_semi_structured_mm"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_semi_structured_tile =
    foreign
      "atg__sparse_semi_structured_tile"
      (ptr raw_tensor @-> gc_tensor @-> string @-> int @-> returning void)
  ;;

  let stubs__sparse_softmax =
    foreign "atg__sparse_softmax" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_softmax_backward_data =
    foreign
      "atg__sparse_softmax_backward_data"
      (gc_tensor @-> gc_tensor @-> int64_t @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__sparse_softmax_backward_data_out =
    foreign
      "atg__sparse_softmax_backward_data_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_softmax_int =
    foreign
      "atg__sparse_softmax_int"
      (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_softmax_out =
    foreign
      "atg__sparse_softmax_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_sparse_matmul =
    foreign "atg__sparse_sparse_matmul" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__sparse_sparse_matmul_out =
    foreign
      "atg__sparse_sparse_matmul_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__sparse_sum = foreign "atg__sparse_sum" (gc_tensor @-> returning raw_tensor)

  let stubs__sparse_sum_backward =
    foreign
      "atg__sparse_sum_backward"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_sum_backward_out =
    foreign
      "atg__sparse_sum_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_sum_dim =
    foreign
      "atg__sparse_sum_dim"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_sum_dim_dtype =
    foreign
      "atg__sparse_sum_dim_dtype"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_sum_dim_out =
    foreign
      "atg__sparse_sum_dim_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_sum_dtype =
    foreign "atg__sparse_sum_dtype" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__spdiags =
    foreign
      "atg__spdiags"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__spdiags_out =
    foreign
      "atg__spdiags_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__spsolve =
    foreign "atg__spsolve" (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__stack =
    foreign "atg__stack" (ptr gc_tensor @-> int @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__stack_out =
    foreign
      "atg__stack_out"
      (gc_tensor @-> ptr gc_tensor @-> int @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__standard_gamma =
    foreign "atg__standard_gamma" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__standard_gamma_grad =
    foreign "atg__standard_gamma_grad" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__standard_gamma_grad_out =
    foreign
      "atg__standard_gamma_grad_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__standard_gamma_out =
    foreign "atg__standard_gamma_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__test_ambiguous_defaults =
    foreign
      "atg__test_ambiguous_defaults"
      (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__test_ambiguous_defaults_b =
    foreign
      "atg__test_ambiguous_defaults_b"
      (gc_tensor @-> int64_t @-> string @-> returning raw_tensor)
  ;;

  let stubs__test_autograd_multiple_dispatch =
    foreign "atg__test_autograd_multiple_dispatch" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__test_autograd_multiple_dispatch_fullcoverage_out =
    foreign
      "atg__test_autograd_multiple_dispatch_fullcoverage_out"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__test_autograd_multiple_dispatch_ntonly =
    foreign
      "atg__test_autograd_multiple_dispatch_ntonly"
      (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__test_autograd_multiple_dispatch_view =
    foreign
      "atg__test_autograd_multiple_dispatch_view"
      (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__test_autograd_multiple_dispatch_view_copy =
    foreign
      "atg__test_autograd_multiple_dispatch_view_copy"
      (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__test_autograd_multiple_dispatch_view_copy_out =
    foreign
      "atg__test_autograd_multiple_dispatch_view_copy_out"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__test_check_tensor =
    foreign "atg__test_check_tensor" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__test_functorch_fallback =
    foreign
      "atg__test_functorch_fallback"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__test_functorch_fallback_out =
    foreign
      "atg__test_functorch_fallback_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__test_optional_filled_intlist =
    foreign
      "atg__test_optional_filled_intlist"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__test_optional_filled_intlist_out =
    foreign
      "atg__test_optional_filled_intlist_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__test_optional_floatlist =
    foreign
      "atg__test_optional_floatlist"
      (gc_tensor @-> ptr double @-> int @-> returning raw_tensor)
  ;;

  let stubs__test_optional_floatlist_out =
    foreign
      "atg__test_optional_floatlist_out"
      (gc_tensor @-> gc_tensor @-> ptr double @-> int @-> returning raw_tensor)
  ;;

  let stubs__test_optional_intlist =
    foreign
      "atg__test_optional_intlist"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__test_optional_intlist_out =
    foreign
      "atg__test_optional_intlist_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__test_parallel_materialize =
    foreign
      "atg__test_parallel_materialize"
      (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__test_serialization_subcmul =
    foreign
      "atg__test_serialization_subcmul"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs__test_string_default =
    foreign
      "atg__test_string_default"
      (gc_tensor @-> string @-> string @-> returning raw_tensor)
  ;;
end

module C1 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs__test_warn_in_autograd =
    foreign "atg__test_warn_in_autograd" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__test_warn_in_autograd_out =
    foreign
      "atg__test_warn_in_autograd_out"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__thnn_differentiable_gru_cell_backward =
    foreign
      "atg__thnn_differentiable_gru_cell_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__thnn_differentiable_lstm_cell_backward =
    foreign
      "atg__thnn_differentiable_lstm_cell_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__thnn_fused_gru_cell =
    foreign
      "atg__thnn_fused_gru_cell"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__thnn_fused_gru_cell_backward =
    foreign
      "atg__thnn_fused_gru_cell_backward"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning void)
  ;;

  let stubs__thnn_fused_gru_cell_backward_out =
    foreign
      "atg__thnn_fused_gru_cell_backward_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> returning void)
  ;;

  let stubs__thnn_fused_gru_cell_out =
    foreign
      "atg__thnn_fused_gru_cell_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__thnn_fused_lstm_cell =
    foreign
      "atg__thnn_fused_lstm_cell"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__thnn_fused_lstm_cell_backward =
    foreign
      "atg__thnn_fused_lstm_cell_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> returning void)
  ;;

  let stubs__thnn_fused_lstm_cell_backward_impl =
    foreign
      "atg__thnn_fused_lstm_cell_backward_impl"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> returning void)
  ;;

  let stubs__thnn_fused_lstm_cell_backward_impl_out =
    foreign
      "atg__thnn_fused_lstm_cell_backward_impl_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> returning void)
  ;;

  let stubs__thnn_fused_lstm_cell_out =
    foreign
      "atg__thnn_fused_lstm_cell_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__to_copy =
    foreign "atg__to_copy" (gc_tensor @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__to_copy_out =
    foreign "atg__to_copy_out" (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__to_cpu =
    foreign "atg__to_cpu" (ptr gc_tensor @-> int @-> returning (ptr raw_tensor))
  ;;

  let stubs__to_dense =
    foreign "atg__to_dense" (gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;
